made changes to nav bar and added hero image

--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
             </ul>
         </div>
     </nav>
+    <div id="mainContent">
+        <div id="firstImage">
+            <img src="images/hero-image.jpg" alt="Image Of Meal Dishes">
+            <p>START THE WEEK OFF RIGHT</p>
+        </div>
+    </div>
 </body>
 </html>
