--- a/index.html
+++ b/index.html
@@ -23,6 +23,22 @@
             <img src="images/hero-image.jpg" alt="Image Of Meal Dishes">
             <p>START THE WEEK OFF RIGHT</p>
         </div>
+        <div id="segment1">
+            <div>
+                <h2>Everyday Categories</h2>
+                <p>Everyday Food has developed recipes with the home cook in mind. These delicious dishes featured on "RY Paris" call for simple ingredients that you already have in your pantry or can easily find at local grocery stores and farmers' markets.</p>
+            </div>
+            <div id="segment1Images">
+                <img src="images/breakfast-ideas.jpg" alt="Image of a Breakfast">
+                <img src="images/vegetarian-ideas.jpg" alt="Image of a Vegetarian Lunch">
+                <img src="images/cold-weather-dinners.jpeg" alt="Image of Breakfast">
+            </div>
+            <div id="segment1ImagesText">
+                <p>Breakfast Most Important Meal</p>
+                <p>Vegetarian Lunch Ideas</p>
+                <p>Cold-Weather Weeknight Dinners</p>
+            </div>
+        </div>
     </div>
 </body>
 </html>
