--- a/index.html
+++ b/index.html
@@ -39,6 +39,61 @@
                 <p>Cold-Weather Weeknight Dinners</p>
             </div>
         </div>
+        <div id="segment2">
+            <div id="segment2Text">
+                <h2>Healthy Recipes of the Week</h2>
+                <p>This weeks top award winners to critically-acclaimed recipe gems, check out these original recipes from home cook and professional chefs around the country.</p>
+            </div>
+            <div id="segment2Images">
+                <div class="item">
+                    <img src="images/fajita-peppers.jpeg">
+                    <p>Fajita-Stuffed Peppers</p>
+                </div>
+                <div class="item">
+                    <img src="images/muffins.jpeg">
+                    <p>Ree's Breakfast Muffins</p>
+                </div>
+                <div class="item">
+                    <img src="images/eggplant-parmesan.jpg">
+                    <p>Eggplant Parmesan</p>
+                </div>
+                <div class="item">
+                    <img src="images/burger.jpg">
+                    <p>Yummy Burger</p>
+                </div>
+            </div>
+        </div>
+        <div id="segment3">
+           <div id="segment3Text">
+                <h2>Where to Eat</h2>
+                <p>This is not an aspirational fluff of Instagram wall neon; it's fact. Recent surveys have shown that a majority of travelers consider food first when planning a trip, even ahead of where they sleep. Add to this that people are also traveling more than ever before - earthlings logged a record-breaking 1.4 billion international trips last year - and it's safe to say that the hunger for new culinary experiences is more ravenous than ever.</p>
+                <p>While the endlessly alluring bistros of Paris, izakayas of Tokyo, shawarma stands of Tel Aviv, and tasting menus of Mexico City will always top many people's lists of cravings, we're continually on the lookout for something new to fill out bellies, our passports, and our feeds.</p>
+           </div>
+           <div id="segment3Images">
+                <div>
+                    <img src="images/bengal-burger.jpg">
+                    <p>Best Sandwiches in America</p>
+                </div>
+                <div class="item">
+                    <img src="images/pizza.jpeg">
+                    <p>50 States of Pizza Slices</p>
+                </div>
+                <div class="item">
+                    <img src="images/cold-weather-dinners.jpeg">
+                    <p>City Guides</p>
+                </div>
+            </div>
+        </div>
+        <div id="footer">
+            <p>&#169 2020 RY PARIS</p>
+            <ul id="footerLinks">
+                <li><a href="#">Site Map</a></li>
+                <li><a href="#">Privacy Policy</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Advertise</a></li>
+                <li><a href="#">Help</a></li>
+            </ul>
+        </footer>
     </div>
 </body>
 </html>
