finished base recipe page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <li><a href="#">Advertise</a></li>
                 <li><a href="#">Help</a></li>
             </ul>
-        </footer>
+        </div>
     </div>
 </body>
 </html>
