added a video in the recipe page and changed images on the main page

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <p>50 States of Pizza Slices</p>
                 </div>
                 <div class="item">
-                    <img src="images/cold-weather-dinners.jpeg">
+                    <img src="images/waffle-sandwich.jpg">
                     <p>City Guides</p>
                 </div>
             </div>
