--- a/recipe.html
+++ b/recipe.html
@@ -102,6 +102,14 @@
                 </div>
             </div>
         </div>
+        <div class="video-container">
+            <iframe 
+                src="https://www.youtube.com/embed/https://www.youtube.com/watch?v=tuDbSVyClzI" 
+                title="YouTube video player" 
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
+                allowfullscreen>
+            </iframe>
+        </div>
         <div id="footer">
             <p>&#169 2020 RY PARIS</p>
             <ul id="footerLinks">
@@ -113,7 +121,5 @@
             </ul>
         </div>
     </div>
-<body>
-    
 </body>
 </html>
