--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="navContent">
             <img src="images/ryparis-logo.png" alt="RYParis Logo">
             <ul id="navLinks">
-                <li><a href="#">Popular Recipes</a></li>
+                <li><a href="recipe.html">Popular Recipes</a></li>
                 <li><a href="#">What's New</a></li>
                 <li><a href="#">Categories</a></li>
                 <li><a href="#">Meal Ideas</a></li>
