added alt tags to all images and fixed youtube link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="segment1Images">
                 <img src="images/breakfast-ideas.jpg" alt="Image of a Breakfast">
                 <img src="images/vegetarian-ideas.jpg" alt="Image of a Vegetarian Lunch">
-                <img src="images/cold-weather-dinners.jpeg" alt="Image of Breakfast">
+                <img src="images/cold-weather-dinners.jpeg" alt="Image of Dinner">
             </div>
             <div id="segment1ImagesText">
                 <p>Breakfast Most Important Meal</p>
@@ -46,19 +46,19 @@
             </div>
             <div id="segment2Images">
                 <div class="item">
-                    <img src="images/fajita-peppers.jpeg">
+                    <img src="images/fajita-peppers.jpeg" alt="Image of fajita-peppers">
                     <p>Fajita-Stuffed Peppers</p>
                 </div>
                 <div class="item">
-                    <img src="images/muffins.jpeg">
+                    <img src="images/muffins.jpeg" alt="Image of muffins">
                     <p>Ree's Breakfast Muffins</p>
                 </div>
                 <div class="item">
-                    <img src="images/eggplant-parmesan.jpg">
+                    <img src="images/eggplant-parmesan.jpg" alt="Image of eggplant-parmesan dish">
                     <p>Eggplant Parmesan</p>
                 </div>
                 <div class="item">
-                    <img src="images/burger.jpg">
+                    <img src="images/burger.jpg" alt="Image of a yummy burger">
                     <p>Yummy Burger</p>
                 </div>
             </div>
@@ -71,15 +71,15 @@
            </div>
            <div id="segment3Images">
                 <div>
-                    <img src="images/bengal-burger.jpg">
+                    <img src="images/bengal-burger.jpg" alt="Image of another yummy burger">
                     <p>Best Sandwiches in America</p>
                 </div>
                 <div class="item">
-                    <img src="images/pizza.jpeg">
+                    <img src="images/pizza.jpeg" alt="Image of a pizza">
                     <p>50 States of Pizza Slices</p>
                 </div>
                 <div class="item">
-                    <img src="images/waffle-sandwich.jpg">
+                    <img src="images/waffle-sandwich.jpg" alt="Image of a waffle-sandwich">
                     <p>City Guides</p>
                 </div>
             </div>
