--- a/recipe.html
+++ b/recipe.html
@@ -104,7 +104,7 @@
         </div>
         <div class="video-container">
             <iframe 
-                src="https://www.youtube.com/embed/https://www.youtube.com/watch?v=tuDbSVyClzI" 
+                src="https://www.youtube.com/embed/tuDbSVyClzI" 
                 title="YouTube video player" 
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                 allowfullscreen>
